--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="cebolla"><img src="images/cebolla.png" draggable="true" alt="cebolla"></div>
             </div>
             <div class="platanos">
-                <div class="platano"><img src="images/platano.png" draggable="true" alt="platano"></div>
+                <div class="platano"><img src="images/platano.png" id="juan" draggable="true" alt="platano"></div>
                 <div class="platano"><img src="images/platano.png" draggable="true" alt="platano"></div>
                 <div class="platano"><img src="images/platano.png" draggable="true" alt="platano"></div>
                 <div class="platano"><img src="images/platano.png" draggable="true" alt="platano"></div>
