--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="pimiento"><img src="images/pimiento.png" draggable="true" alt="pimiento"></div>
             </div>
             <div class="cebollas">
-                <div class="cebolla"><img src="images/cebolla.png" draggable="true" alt="cebolla"></h1></div>
+                <div class="cebolla"><img src="images/cebolla.png" draggable="true" alt="cebolla"></div>
                 <div class="cebolla"><img src="images/cebolla.png" draggable="true" alt="cebolla"></div>
                 <div class="cebolla"><img src="images/cebolla.png" draggable="true" alt="cebolla"></div>
                 <div class="cebolla"><img src="images/cebolla.png" draggable="true" alt="cebolla"></div>
