--- a/index.html
+++ b/index.html
@@ -16,36 +16,36 @@
             <div><h3 class="tablaPrecio">Zanahorias 1.2€</h3></div>
             <div><h3 class="tablaPrecio">Sandias 3€</h3></div>
             <div class="peras">
-                <div class="pera"><img src="images/pera.png" draggable="true" alt="pera"></div>
-                <div class="pera"><img src="images/pera.png" draggable="true" alt="pera"></div>
-                <div class="pera"><img src="images/pera.png" draggable="true" alt="pera"></div>
-                <div class="pera"><img src="images/pera.png" draggable="true" alt="pera"></div>
-                <div class="pera"><img src="images/pera.png" draggable="true" alt="pera"></div>
-                <div class="pera"><img src="images/pera.png" draggable="true" alt="pera"></div>
+                <div class="pera"><img src="images/pera.png" id="miFruta0" class="pera" draggable="true" alt="pera"></div>
+                <div class="pera"><img src="images/pera.png" id="miFruta1" class="pera" draggable="true" alt="pera"></div>
+                <div class="pera"><img src="images/pera.png" id="miFruta2" class="pera" draggable="true" alt="pera"></div>
+                <div class="pera"><img src="images/pera.png" id="miFruta3" class="pera" draggable="true" alt="pera"></div>
+                <div class="pera"><img src="images/pera.png" id="miFruta4" class="pera" draggable="true" alt="pera"></div>
+                <div class="pera"><img src="images/pera.png" id="miFruta5" class="pera" draggable="true" alt="pera"></div>
             </div>
             <div class="naranjas">
-                <div class="naranja"><img src="images/naranja.png" draggable="true" alt="naranja"></div>
-                <div class="naranja"><img src="images/naranja.png" draggable="true" alt="naranja"></div>
-                <div class="naranja"><img src="images/naranja.png" draggable="true" alt="naranja"></div>
-                <div class="naranja"><img src="images/naranja.png" draggable="true" alt="naranja"></div>
-                <div class="naranja"><img src="images/naranja.png" draggable="true" alt="naranja"></div>
-                <div class="naranja"><img src="images/naranja.png" draggable="true" alt="naranja"></div>
+                <div class="naranja"><img src="images/naranja.png" id="miFruta6" class="naranja" draggable="true" alt="naranja"></div>
+                <div class="naranja"><img src="images/naranja.png" id="miFruta7" class="naranja" draggable="true" alt="naranja"></div>
+                <div class="naranja"><img src="images/naranja.png" id="miFruta8" class="naranja" draggable="true" alt="naranja"></div>
+                <div class="naranja"><img src="images/naranja.png" id="miFruta9" class="naranja" draggable="true" alt="naranja"></div>
+                <div class="naranja"><img src="images/naranja.png" id="miFruta10" class="naranja" draggable="true" alt="naranja"></div>
+                <div class="naranja"><img src="images/naranja.png" id="miFruta11" class="naranja" draggable="true" alt="naranja"></div>
             </div>
             <div class="zanahorias">
-                <div class="zanahoria"><img src="images/zanahoria.png" draggable="true" alt="zanahoria"></div>
-                <div class="zanahoria"><img src="images/zanahoria.png" draggable="true" alt="zanahoria"></div>
-                <div class="zanahoria"><img src="images/zanahoria.png" draggable="true" alt="zanahoria"></div>
-                <div class="zanahoria"><img src="images/zanahoria.png" draggable="true" alt="zanahoria"></div>
-                <div class="zanahoria"><img src="images/zanahoria.png" draggable="true" alt="zanahoria"></div>
-                <div class="zanahoria"><img src="images/zanahoria.png" draggable="true" alt="zanahoria"></div>
+                <div class="zanahoria"><img src="images/zanahoria.png" id="miFruta12" class="zanahoria" draggable="true" alt="zanahoria"></div>
+                <div class="zanahoria"><img src="images/zanahoria.png" id="miFruta13" class="zanahoria" draggable="true" alt="zanahoria"></div>
+                <div class="zanahoria"><img src="images/zanahoria.png" id="miFruta14" class="zanahoria" draggable="true" alt="zanahoria"></div>
+                <div class="zanahoria"><img src="images/zanahoria.png" id="miFruta15" class="zanahoria" draggable="true" alt="zanahoria"></div>
+                <div class="zanahoria"><img src="images/zanahoria.png" id="miFruta16" class="zanahoria" draggable="true" alt="zanahoria"></div>
+                <div class="zanahoria"><img src="images/zanahoria.png" id="miFruta17" class="zanahoria" draggable="true" alt="zanahoria"></div>
             </div>
             <div class="sandias">
-                <div class="sandia"><img src="images/sandia.png" draggable="true" alt="sandia"></div>
-                <div class="sandia"><img src="images/sandia.png" draggable="true" alt="sandia"></div>
-                <div class="sandia"><img src="images/sandia.png" draggable="true" alt="sandia"></div>
-                <div class="sandia"><img src="images/sandia.png" draggable="true" alt="sandia"></div>
-                <div class="sandia"><img src="images/sandia.png" draggable="true" alt="sandia"></div>
-                <div class="sandia"><img src="images/sandia.png" draggable="true" alt="sandia"></div>
+                <div class="sandia"><img src="images/sandia.png" id="miFruta18" class="sandia" draggable="true" alt="sandia"></div>
+                <div class="sandia"><img src="images/sandia.png" id="miFruta19" class="sandia" draggable="true" alt="sandia"></div>
+                <div class="sandia"><img src="images/sandia.png" id="miFruta20" class="sandia" draggable="true" alt="sandia"></div>
+                <div class="sandia"><img src="images/sandia.png" id="miFruta21" class="sandia" draggable="true" alt="sandia"></div>
+                <div class="sandia"><img src="images/sandia.png" id="miFruta22" class="sandia" draggable="true" alt="sandia"></div>
+                <div class="sandia"><img src="images/sandia.png" id="miFruta23" class="sandia" draggable="true" alt="sandia"></div>
             </div>
             <div></div>
             <div></div>
@@ -56,36 +56,36 @@
             <div><h3 class="tablaPrecio">Cebollas 1.5€</h3></div>
             <div><h3 class="tablaPrecio">Platanos 4€</h3></div>
             <div class="pepinos">
-                <div class="pepino"><img src="images/pepino.png" draggable="true" alt="pepino"></div>
-                <div class="pepino"><img src="images/pepino.png" draggable="true" alt="pepino"></div>
-                <div class="pepino"><img src="images/pepino.png" draggable="true" alt="pepino"></div>
-                <div class="pepino"><img src="images/pepino.png" draggable="true" alt="pepino"></div>
-                <div class="pepino"><img src="images/pepino.png" draggable="true" alt="pepino"></div>
-                <div class="pepino"><img src="images/pepino.png" draggable="true" alt="pepino"></div>
+                <div class="pepino"><img src="images/pepino.png" id="miFruta24" class="pepino" draggable="true" alt="pepino"></div>
+                <div class="pepino"><img src="images/pepino.png" id="miFruta25" class="pepino" draggable="true" alt="pepino"></div>
+                <div class="pepino"><img src="images/pepino.png" id="miFruta26" class="pepino" draggable="true" alt="pepino"></div>
+                <div class="pepino"><img src="images/pepino.png" id="miFruta27" class="pepino" draggable="true" alt="pepino"></div>
+                <div class="pepino"><img src="images/pepino.png" id="miFruta28" class="pepino" draggable="true" alt="pepino"></div>
+                <div class="pepino"><img src="images/pepino.png" id="miFruta29" class="pepino" draggable="true" alt="pepino"></div>
             </div>
             <div class="pimientos">
-                <div class="pimiento"><img src="images/pimiento.png" draggable="true" alt="pimiento"></div>
-                <div class="pimiento"><img src="images/pimiento.png" draggable="true" alt="pimiento"></div>
-                <div class="pimiento"><img src="images/pimiento.png" draggable="true" alt="pimiento"></div>
-                <div class="pimiento"><img src="images/pimiento.png" draggable="true" alt="pimiento"></div>
-                <div class="pimiento"><img src="images/pimiento.png" draggable="true" alt="pimiento"></div>
-                <div class="pimiento"><img src="images/pimiento.png" draggable="true" alt="pimiento"></div>
+                <div class="pimiento"><img src="images/pimiento.png" id="miFruta30" class="pimiento" draggable="true" alt="pimiento"></div>
+                <div class="pimiento"><img src="images/pimiento.png" id="miFruta31" class="pimiento" draggable="true" alt="pimiento"></div>
+                <div class="pimiento"><img src="images/pimiento.png" id="miFruta32" class="pimiento" draggable="true" alt="pimiento"></div>
+                <div class="pimiento"><img src="images/pimiento.png" id="miFruta33" class="pimiento" draggable="true" alt="pimiento"></div>
+                <div class="pimiento"><img src="images/pimiento.png" id="miFruta34" class="pimiento" draggable="true" alt="pimiento"></div>
+                <div class="pimiento"><img src="images/pimiento.png" id="miFruta35" class="pimiento" draggable="true" alt="pimiento"></div>
             </div>
             <div class="cebollas">
-                <div class="cebolla"><img src="images/cebolla.png" draggable="true" alt="cebolla"></div>
-                <div class="cebolla"><img src="images/cebolla.png" draggable="true" alt="cebolla"></div>
-                <div class="cebolla"><img src="images/cebolla.png" draggable="true" alt="cebolla"></div>
-                <div class="cebolla"><img src="images/cebolla.png" draggable="true" alt="cebolla"></div>
-                <div class="cebolla"><img src="images/cebolla.png" draggable="true" alt="cebolla"></div>
-                <div class="cebolla"><img src="images/cebolla.png" draggable="true" alt="cebolla"></div>
+                <div class="cebolla"><img src="images/cebolla.png" id="miFruta36" class="cebolla" draggable="true" alt="cebolla"></div>
+                <div class="cebolla"><img src="images/cebolla.png" id="miFruta37" class="cebolla" draggable="true" alt="cebolla"></div>
+                <div class="cebolla"><img src="images/cebolla.png" id="miFruta38" class="cebolla" draggable="true" alt="cebolla"></div>
+                <div class="cebolla"><img src="images/cebolla.png" id="miFruta39" class="cebolla" draggable="true" alt="cebolla"></div>
+                <div class="cebolla"><img src="images/cebolla.png" id="miFruta40" class="cebolla" draggable="true" alt="cebolla"></div>
+                <div class="cebolla"><img src="images/cebolla.png" id="miFruta41" class="cebolla" draggable="true" alt="cebolla"></div>
             </div>
             <div class="platanos">
-                <div class="platano"><img src="images/platano.png" draggable="true" alt="platano"></div>
-                <div class="platano"><img src="images/platano.png" draggable="true" alt="platano"></div>
-                <div class="platano"><img src="images/platano.png" draggable="true" alt="platano"></div>
-                <div class="platano"><img src="images/platano.png" draggable="true" alt="platano"></div>
-                <div class="platano"><img src="images/platano.png" draggable="true" alt="platano"></div>
-                <div class="platano"><img src="images/platano.png" draggable="true" alt="platano"></div>
+                <div class="platano"><img src="images/platano.png" id="miFruta42" class="platano" draggable="true" alt="platano"></div>
+                <div class="platano"><img src="images/platano.png" id="miFruta43" class="platano" draggable="true" alt="platano"></div>
+                <div class="platano"><img src="images/platano.png" id="miFruta44" class="platano" draggable="true" alt="platano"></div>
+                <div class="platano"><img src="images/platano.png" id="miFruta45" class="platano" draggable="true" alt="platano"></div>
+                <div class="platano"><img src="images/platano.png" id="miFruta46" class="platano" draggable="true" alt="platano"></div>
+                <div class="platano"><img src="images/platano.png" id="miFruta47" class="platano" draggable="true" alt="platano"></div>
             </div>
 
         </div>
