poniendo el id y la clase a las frutas

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div></div>
             <div></div>
             <div>
-                <h4>Resumen compra</h4>
+                <h4>Resumen de compra</h4>
                 <div id="precio"></div>
                 <hr>
                 <div><h3 id="total"></h3></div>
